--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name": "Lektori – Rozpis čítaní",
     "short_name": "Lektori",
     "description": "Rozpis čítaní lektorov na sv. omšiach",
-    "start_url": "/",
+    "start_url": "./",
     "display": "standalone",
     "background_color": "#F5F7FA",
     "theme_color": "#1A1A2E",
